--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dexie": "^2.0.4",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
+    "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0"
   },
