--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "author": "",
