--- a/web-socket-server/package.json
+++ b/web-socket-server/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "ws": "^7.0.0"
   }
 }
