--- a/web-socket-server/package.json
+++ b/web-socket-server/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
+    "nodemon": "^1.19.0",
     "ws": "^7.0.0"
   }
 }
