--- a/user-database/package.json
+++ b/user-database/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.0",
     "pg": "^7.10.0"
   }
 }
