--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-router": "^5.0.0",
