--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dexie": "^2.0.4",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.6.1",
