--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.0.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
+    "now-env": "^3.2.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-router": "^5.0.0",
