--- a/web-socket-server/package.json
+++ b/web-socket-server/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bufferutil": "^4.0.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "nodemon": "^1.19.0",
+    "utf-8-validate": "^5.0.2",
     "ws": "^7.0.0"
   }
 }
