--- a/web-socket-server/package.json
+++ b/web-socket-server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bufferutil": "^4.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "nodemon": "^1.19.0",
