Adds MUI dependency, switching to dev environment

--- a/front-end/.env
+++ b/front-end/.env
@@ -1,1 +1,2 @@
-REACT_APP_USERS_DATABASE=http://localhost:5431
+REACT_APP_USERS_DB=http://localhost:5431
+ONLINE_DB=https://chatty-user-db.herokuapp.com
