--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "axios": "^0.18.0",
     "dexie": "^2.0.4",
     "dotenv": "^8.0.0",
