--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.1.2",
     "axios": "^0.18.0",
     "dexie": "^2.0.4",
     "dotenv": "^8.0.0",
