--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,2 @@
 REACT_APP_USERS_DB=http://localhost:5431
-ONLINE_DB=https://chatty-user-db.herokuapp.com
+###online hosted db=https://chatty-user-db.herokuapp.com
