--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,3 @@
 REACT_APP_USERS_DB=http://localhost:5431
 ###online hosted db=https://chatty-user-db.herokuapp.com
+SOCKET_URL=https://chatty-ws.herokuapp.com
