Adjusts letter spacing on header text. Slight adjustments on login screen

--- a/front-end/.env
+++ b/front-end/.env
@@ -1,3 +1,4 @@
 REACT_APP_USERS_DB=http://localhost:5431
 ###online hosted db=https://chatty-user-db.herokuapp.com
 SOCKET_URL=https://chatty-ws.herokuapp.com
+REACT_APP_SOCKET_URL=ws://localhost:1234
